--- a/src/styles/HomePage.css
+++ b/src/styles/HomePage.css
@@ -1,6 +1,7 @@
 .container {
     display: grid;
-    grid-template-columns: 80% 20%;
+    grid-template-columns: 70% 30%;
+    margin: 0px 0px 0px 0px;
 }
 .login{
     font-size: x-large;
