--- a/src/styles/HomePage.css
+++ b/src/styles/HomePage.css
@@ -1,18 +1,18 @@
 .container {
     display: grid;
     grid-template-columns: 70% 30%;
-    margin: 0px 0px 0px 0px;
+   
 }
 .login{
     font-size: x-large;
     /* border-style: dashed; */
     text-align: center;
-    padding-top: 20px;
+    padding-top: 2%;
 }
 
 .Header li{
     /* border-style: dashed; */
     display: inline-block;
     zoom:1.5;
-    padding-left: 120px;
+    padding-left: 2em;
 }
