fix style. put  the loading center

--- a/src/styles/LoginPage.css
+++ b/src/styles/LoginPage.css
@@ -2,3 +2,8 @@
     /* border-style: dashed; */
     text-align: center;
 }
+
+.loading{
+    /* border-style: dashed; */
+    text-align: center;
+}
