--- a/src/styles/detail.css
+++ b/src/styles/detail.css
@@ -1,37 +1,39 @@
 .wrapper {
-    /* border-style         : dashed; */
+    margin-top           : 3em;
     display              : grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-gap             : 1em;
 }
 
 .wrapper>div {
-    /* border-style  : solid; */
-    padding       : 2em;
-    grid-auto-rows: minmax(100px, auto);
+    /* border-style: solid; */
 }
 
-.detailImg {
-    grid-column: 1/2;
+.wrapper image {
+    height: 100px;
+    width : 500px;
+}
+
+.box1 {
+    padding-left: 3em;
+    grid-column : 1/2;
+    grid-row    : 1/2;
+}
+
+.box2 {
+    grid-column: 2/5;
     grid-row   : 1/2;
 }
 
-.detailOverview {
-    grid-column: 2/4;
-    grid-row   : 1/2;
+.box3 {
+    padding-left: 3em;
+    text-align  : justify;
 }
 
-.detailRating{
-    grid-column: 3/4;
-    grid-row: 2/3;
+.box4 {
+    text-align: center;
 }
 
-.detailTitle {
-    grid-row: 2/3;
+.box4>div {
+    padding-top: 5em;
 }
-
-.detailMap{
-    grid-column: 2/3;
-    grid-row: 2/3;
-}
-
